<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">todolist</string>


    <!--Titles-->
    <string name="welcome_title">Welcome!</string>
    <string name="sing_up_title">Sign up</string>
    <string name="task_list_title">Task list</string>


    <!--Buttons-->
    <string name="log_in_btn">Login</string>
    <string name="sign_up_btn">Signup</string>

    <string name="sign_up_google">Google</string>
    <string name="sign_up_facebook">Facebook</string>


    <!--Hints-->
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="edit_task">Edit</string>
    <string name="delete_task_btn">Delete</string>
    <string name="save_task_btn">Save</string>
    <string name="title_hint">Название</string>
    <string name="description_hint">Описание</string>
    <string name="start_date">День</string>
    <string name="end_date">Время</string>
    <string name="remind_question">Напомнить?</string>
    <string name="action_edit_title">Редактировать</string>
    <string name="action_delete_title">Удалить</string>
    <string name="action_save_title">Сохранить</string>

    <string name="action_alarm">alarm</string>
    <string name="action_search">Поиск</string>
    <string name="action_close">Отмена</string>
    <string name="logo">logo</string>
    <string name="no_account_title">Don\'t have an account?  <u>Create now</u></string>
    <string name="create_account"><u>Create now</u></string>
    <string name="title">Вход в \"Название приложения\"</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="enter_btn_text">Войти</string>
    <string name="forget_password_text">Забыли пароль?</string>
    <string name="enter_by_google">Войти с помощью Google</string>
    <string name="registration_text">У Вас нет аккаунта?
        <em>Зарегистрируйтесь</em>
    </string>

    <string-array name="remind_type">
        <item>Нет</item>
        <item>За 5 минут</item>
        <item>За 10 минут</item>
        <item>за 30 минут</item>
        <item>за 1 час</item>
    </string-array>
    <string name="title_activity_drawler_menu">DrawlerMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_today">Сегодня</string>
    <string name="menu_week">Следующие 7 дней</string>
    <string name="menu_incoming">Входящие</string>
    <string name="menu_all">Настройки</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_add_list">Добавить список</string>

</resources>
