<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_week_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_week" />
        <item
            android:id="@+id/nav_incoming"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_incoming" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_all" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_calendar" />
            <item
                android:id="@+id/nav_add_list"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_add_list" />
        </menu>
    </item>

</menu>
