<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBrown"
    tools:context=".ui.auth.singup.SignUpActivity">


    <include layout="@layout/logo"/>

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/logo"
        android:textColor="@color/colorAlmond"
        android:text="@string/sing_up_title"
        android:textSize="@dimen/title_size" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAlmond"
        android:textColorHint="@color/colorAlmond"
        android:hint="@string/email_input_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_input"
        android:textColor="@color/colorAlmond"
        android:textColorHint="@color/colorAlmond"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorSea"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_up_btn" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:indeterminateDuration="1200"
        />
</RelativeLayout>