<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBrown"
    tools:context=".ui.auth.login.LoginActivity">

<!--    <ImageView-->
<!--        android:id="@+id/logo"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:src="@drawable/ic_default_monochrome"-->
<!--        />-->

    <include layout="@layout/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_title"
        android:layout_below="@+id/logo"
        android:text="@string/log_in_title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/colorAlmond"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_input"
        android:layout_below="@+id/login_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAlmond"
        android:textColorHint="@color/colorAlmond"
        android:hint="@string/email_input_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/password_input"
        android:layout_below="@+id/email_input"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAlmond"
        android:textColorHint="@color/colorAlmond"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"/>

    <View
        android:id="@+id/space"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password_input"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_in_btn"
        android:text="@string/log_in_btn"
        android:background="@color/colorSea"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="10dp"
        android:layout_below="@id/space"
        android:layout_alignStart="@id/space"
        android:layout_centerHorizontal="true"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space"
        android:layout_marginStart="30dp"
        android:layout_alignStart="@id/space"
        android:visibility="invisible"
        android:indeterminateDuration="1200"
        />
    <Button
        android:background="@color/colorSea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_btn"
        android:text="@string/sign_up_btn"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/space"
        android:layout_alignEnd="@id/space"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>